footer alignment fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -241,9 +241,6 @@ body {
     padding: 20px;
     justify-content: space-evenly;
     margin-top: 5rem;
-    bottom: 0;
-    width: 100%;
-    height: 60px;
     background: #ddd;
 }
 
